# osl-website

./: .eslintrc.json  .gitignore  .prettierrc  NetrwMessage  Procfile  README.md  cert.pem  config.py  key.pem  next.config.js  oslapi.py  package-lock.json  package.json  pyproject.toml  q  req-dev.txt  req.txt  requirements.txt  restapi_names.md  run.py  s.py  server.js  setup.py  tasks.txt  test_requests.py  tsconfig.json
api/: __init__.py  db.py  external_functions.py  field_models.py  models.py  query_checker.py
api/blueprints/: admin.py  api.py  auth.py  facilities.py  query.py  queue.py
api/db_models/: article_models.py  facility_models.py  user_models.py
api/static/: swagger.json
api/tests/: test.py
api/v1/: config.py  token_gen.py
api/validation_models/: auth_models.py  facility_models.py  queue_models.py
database/: site-sessions-1-data  site.db
database-js/: data.sqlite  db.config.js
legacy/: auth.py  forms.py
pages/: 404.tsx  [param].tsx  _app.tsx  _document.tsx  _offline.tsx  facilities.tsx  index.tsx  queues.tsx
public/: fallback-SkA7YcYOVqEsnjTZ0rGcN.js  manifest.json  sw.js
src/: .gitignore  .gitingnore  .py.py.swp  .ycm_extra_conf.py  __init__.py  config.py  email_token.py  models.py  pyproject.toml  query_checker.py
src/blueprints/: admin.py  api.py  auth.py  devices.py  home.py  query.py  swagger.py
src/static/: swagger.json
src/templates/: home.html  login.html  register.html
src/tests/: test.py
styles/: default-consts.scss  globals.scss
tests/: api_test.go  go.mod  login.data  test_concurent.py  test_conf.py
(+125 files in other folders)
