[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["timaracov <neyenburgz@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Session = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
loguru = "^0.5.3"
Flask-Mail = "^0.9.1"
Flask-WTF = "^1.0.0"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
